playing with background.

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ url: "/papers" # the base hostname & protocol for your site, e.g. http://example
 twitter_username: jekyllrb
 github_username:  jekyll
 
+background-image: url('background.jpeg') # Negar
+
 # Build settings
 theme: minima
 plugins:
