--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "/papers" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://negar7918.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-background-image: url('negar7918.github.io/background.jpeg') # Negar
+background-image: url('/background.jpeg') # Negar
 
 # Build settings
 theme: minima
