playing with background.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "https://negar7918.github.io" # the base hostname & protocol for your site,
 twitter_username: jekyllrb
 github_username:  jekyll
 
-background-image: url('/background.jpeg') # Negar
+background-image: url('{{ site.url }}/background.jpeg') # Negar
 
 # Build settings
 theme: minima
