--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+image:
+  background: https://negar7918.github.io/background.jpeg
+
 title: Home
 email: negar7918 (at) gmail (dot) com
 description: >- # this means to ignore newlines until "baseurl:"
