--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 image:
-  background: background.jpeg
+  background: https://negar7918.github.io/background.jpeg
 
 title: Home
 email: negar7918 (at) gmail (dot) com
