--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 image: # Negar
   background: https://negar7918.github.io/background.jpeg
 
-title: Home
+title: Negar Safinianaini
 email: negar7918 (at) gmail (dot) com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
