playing with background.

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-image: # Negar
-  background: https://negar7918.github.io/background.jpeg
 
 title: Negar Safinianaini
 email: negar7918 (at) gmail (dot) com
@@ -32,7 +30,9 @@ url: "https://negar7918.github.io" # the base hostname & protocol for your site,
 twitter_username: jekyllrb
 github_username:  jekyll
 
-background-image: url('https://negar7918.github.io/background.jpeg') # Negar
+#background-image: url('https://negar7918.github.io/background.jpeg') # Negar
+image: # Negar
+  background: https://negar7918.github.io/background.jpeg
 
 # Build settings
 theme: minima
