playing with background.

--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ image: # Negar
 
 # Build settings
 #theme: minima
-plugins:
-  - jekyll-feed
+#plugins:
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
