--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,16 @@ url: "https://negar7918.github.io" # the base hostname & protocol for your site,
 twitter_username: jekyllrb
 github_username:  jekyll
 
+background: 'https://negar7918.github.io/background.jpeg'
+
 #background-image: url('https://negar7918.github.io/background.jpeg') # Negar
-image: # Negar
-  background: https://negar7918.github.io/background.jpeg
+#image: # Negar
+  #background: https://negar7918.github.io/background.jpeg
 
 # Build settings
-#theme: minima
-#plugins:
-#  - jekyll-feed
+theme: minima
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
