--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,10 @@
 title: Negar Safinianaini
 email: negar7918 (at) gmail (dot) com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://negar7918.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  negar7918
 
 background: 'https://negar7918.github.io/background.jpeg'
 
