playing with background.

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ background: 'https://negar7918.github.io/background.jpeg'
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+#plugins:
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
