--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 
-title: Negar Safinianaini
+#title: Negar Safinianaini
 email: negar7918 (at) gmail (dot) com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -34,7 +34,7 @@ background: 'https://negar7918.github.io/background.jpeg'
   #background: https://negar7918.github.io/background.jpeg
 
 # Build settings
-theme: minima
+#theme: minima
 #plugins:
 #  - jekyll-feed
 
