--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "https://negar7918.github.io" # the base hostname & protocol for your site,
 #twitter_username: jekyllrb
 github_username:  negar7918
 
-background: 'https://negar7918.github.io/background.jpeg'
+#background: 'https://negar7918.github.io/background.jpeg'
 
 #background-image: url('https://negar7918.github.io/background.jpeg') # Negar
 image: # Negar
@@ -46,14 +46,14 @@ theme: minima
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
+exclude:
+   - .sass-cache/
+   - .jekyll-cache/
 #   - gemfiles/
 #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules/
 #   - vendor/bundle/
-#   - vendor/cache/
+   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
